--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <section class="about glass fade-in">
     <h2>About Me</h2>
-    <p>I build beautiful, intuitive, and efficient web experiences. Passionate about technology, elegance, and design, I aim to blend function with aesthetics in every line of code.</p>
+    <p> I'm a passionate web designer and frontend developer who blends elegant design with clean, efficient code. I specialize in crafting seamless digital experiences that not only look beautiful but also feel intuitive. With a strong eye for aesthetics and a deep understanding of modern web technologies, I turn ideas into visually engaging, user-friendly websites. Whether I’m designing sleek interfaces or building responsive layouts, I always aim for that perfect balance of creativity and functionality. I believe that great design isn’t just about visuals — it’s about telling a story and making users feel something.
+.</p>
   </section>
 
   <section class="projects fade-in">
